# Functional-Extensions

./: .gitignore  LICENSE  README.md  functional_extensions.c  pyproject.toml  setup.cfg  setup.py
src/: base_classes.py  functional_extensions.py  list_extensions.py  prototyping.py  tests.py  types_.py  utils.py
src/functional_extensions/: fe.c  fe.py  tests.py
