[metadata]
name = Functional-Extensions-ReinhardtJ
version = 0.0.1
author = Jonas Reinhardt
author_email = jonas@reinhardt.ai
description = Functional extensions for Python objects
long_descriptions = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ReinhardtJ/Functional-Extensions
project_urls =
    Bug Tracker = https://github.com/ReinhardtJ/Functional-Extensions/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
